fix: avoid usage of jdk.internal.Signal